@@ -1,6 +1,12 @@
 2010-12-19  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* pychecker/CodeChecks.py:
+	  Mark SETUP_WITH and BUILD_SET as unimplemented.
+	  Makes unit tests pass again.
+
+2010-12-19  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* pychecker/CodeChecks.py:
 	  Instead of peaking two intstructions ahead past POP_TOP for
 	  LOAD_CONST, with the new POP/JUMP instructions, peak only one
 	  ahead.
